--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <header class="jumbotron">
         <div class="text-center">
-            <img src="ferawimabla/fera.jpg" class="rounded-circle" alt="Cinque Terre" width="240" height="240"> 
+            <img src="moto.jpg" class="rounded-circle" alt="Cinque Terre" width="240" height="240"> 
             <h1><span class="berthine" ><font color = 'blue'>Ferawi Mabla Bobina </font></span> </h1>
             <div><p align = 'justify'>
             <blockquote>Je suis Ferawi Mabla Bobina, Licencié en Génie-Informatique à l'université de Kinshasa, Faculté de Sciences, departement de Mathématiques et Informatique,Inventeur Congolais et gagnant du Concours de la Master Class de l'inventeur et Innovateur Congolais.</blockquote>
