--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="jumbotron text-center">
           <div class="container">
   <!-- <h2>Educational Info</h2><br> -->
-  <img src="dz.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200"> 
+  <img src="dz.JPG" class="rounded-circle" alt="Cinque Terre" width="200" height="200"> 
   <div id="accordion"> 
     <div class="card">
       <div class="card-header">
