--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       
       <div id="collapseOne" class="collapse show">
         <div class="card-body">
-          <img src="rfid.png" class="flr" alt="Cinque Terre" width="350" height="200"> 
+          <img src="rfid.PNG" class="flr" alt="Cinque Terre" width="350" height="200"> 
           <!-- <img src="esmt.png" class="mx-auto d-block" alt="Cinque Terre" width="100" height="60"> -->
 		 <li>le système de controle d'accès par Badge </a></li>
 		  <li>voici la vidéo demostrative de système de controle d'accès <a href= "https:https://www.youtube.com/watch?v=Rb5D-ESqcX4/">controle d'acces par RFID</a></li>
@@ -357,7 +357,7 @@
       
       <div id="collapseOne" class="collapse show">
         <div class="card-body">
-          <img src="res.png" class="flr" alt="Cinque Terre" width="350" height="200"> 
+          <img src="res.PNG" class="flr" alt="Cinque Terre" width="350" height="200"> 
           <!-- <img src="esmt.png" class="mx-auto d-block" alt="Cinque Terre" width="100" height="60"> -->
 		 <li>cet interrupteur rendra l'accès facile meme aux personnes à mobilité reduite en vue d'allumer et éteindre leurs ampoules </a></li>
 		  <li>la vidéo montre comment on peut éteindre les ampoules par claquement des mains  <a href= "https:https://www.youtube.com/watch?v=XqACpkePfp4">Interrupteur crépusculaire</a></li>
